--- a/aula06/ex002.html
+++ b/aula06/ex002.html
@@ -17,10 +17,8 @@
     <h1>Olá, Mundo</h1>
     <p>Já me livrei da maldição</p>
     <script>
-        var n1 = window.prompt("Digite um número: ");
-        var n2 = window.prompt("Digite outro número");
-        var soma = Number.parseFloat(n1) + Number.parseFloat(n2);
-        window.alert('A soma de ' + n1 + ' + ' + n2 + ' é ' + soma)
+        var nome = window.prompt('Qual é o seu nome?');
+        window.alert('É um grande prazer te conhecer, ' + nome);
     </script>
 </body>
 </html>
