--- a/exercicios/ex01/ex01.html
+++ b/exercicios/ex01/ex01.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="style.css">
     <title>Hora do Dia</title>
 </head>
-<body>
+<body onload="carregar()">
     <header>    
         <h1>Hora do Dia</h1>
     </header>
     <section>
         <div id="hora"></div>
-        <div id="img"></div>
+        <div id="foto">
+            <img id="img" src="imagens/dia.png" alt="Foto do dia">
+        </div>
     </section>
     <footer>
         <p>&copy;Curso em vídeo</p>
