--- a/exercicios/ex03/ex03.html
+++ b/exercicios/ex03/ex03.html
@@ -5,18 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Hora do Dia</title>
+    <title>Super contador</title>
 </head>
 <body>
     <header>    
-    
+        <h1>Vamos contar!</h1>
     </header>
     <section>
         <div>
-
+            <p>
+                <label for="iini">Início:</label>
+                <input type="number" name="ini" id="iini">
+            </p>
+            <p>
+                <label for="ifim">Fim:</label>
+                <input type="number" name="fim" id="ifim">
+            </p>
+            <p>
+                <label for="ipas">Passo:</label>
+                <input type="number" name="pas" id="ipas">
+            </p>
+            <p>
+                <input type="button" value="Contar" onclick="contar()">
+            </p>
         </div>
-        <div>
-            
+        <div id="res">
+            Preparando a contagem...
         </div>
     </section>
     <footer>
