--- a/exercicios/ex04/ex04.html
+++ b/exercicios/ex04/ex04.html
@@ -5,18 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Hora do Dia</title>
+    <title>Tabuada</title>
 </head>
 <body>
     <header>    
-    
+        <h1>Tabuada</h1>
     </header>
     <section>
         <div>
-
+            <p>
+                <label for="in">Número</label>
+                <input type="number" name="n" id="in">
+                <input type="button" value="Gerar tabuada" onclick="tabuada()">
+            </p>
         </div>
         <div>
-            
+            <p id="txt">
+                <select name="tabuada" id="seltab" size="10">
+                    <option>Digite um número</option>
+                </select>
+            </p>
         </div>
     </section>
     <footer>
